frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-app
  namespace: frontend1
  labels:
    app:  docker-app
spec:
  selector:
    matchLabels:
      app: docker-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  docker-app
    spec:
      containers:
      - name:  docker-app
        image: 315073111691.dkr.ecr.us-west-2.amazonaws.com/frontend:1
        ports:
        - containerPort:  80
          name:  docker-app
