frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: frontend1
spec:
  rules:
  - host: frontend.sainath.quest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: service-app
            name: docker-app
            port:
              number: 80
